Move to environment files instead of set-env.

--- a/.github/workflows/tests-codecheck.yml
+++ b/.github/workflows/tests-codecheck.yml
@@ -27,7 +27,6 @@ jobs:
       - if: ${{ steps.file_changes.outputs.all }}
         name: Compare file changes
         run: |
-          sudo apt-get install jq
           FILES_ALL="$(echo '${{ steps.file_changes.outputs.all }}' | jq -r '.[]' | tr '\n' ' ')"
           FILES_ADDED="$(echo '${{ steps.file_changes.outputs.added }}' | jq -r '.[]' | tr '\n' ' ')"
           FILES_DELETED="$(echo '${{ steps.file_changes.outputs.deleted }}' | jq -r '.[]' | tr '\n' ' ')"
@@ -38,15 +37,17 @@ jobs:
           CI_TEST_FILES_CHANGED="$(echo ${FILES_ADDED_MODIFIED} | tr ' ' '\n' | grep -E '(workflows\/tests-.+\.yml$|Dockerfile\.tests$|^docker\/.+$|tests\/.+\.sh$)' | tr '\n' ' ')"
           RQ_FILES_CHANGED="$(echo ${FILES_ADDED_MODIFIED} | tr ' ' '\n' | grep -E 'requirements(.*)txt$' | tr '\n' ' ')"
           DOC_FILES_CHANGED="$(echo ${FILES_ADDED_MODIFIED} | tr ' ' '\n' | grep -E '^docs/.+$' | tr '\n' ' ')"
-          echo "Files changed: ${FILES_ADDED_MODIFIED}"
+          if [ ! -z "${CI_TEST_FILES_CHANGED}" ]; then FILES_CHANGED="all"; else FILES_CHANGED="${FILES_ADDED_MODIFIED}"; fi
+          echo "Git added/modified: ${FILES_ADDED_MODIFIED}"
           echo "CI test files changed: ${CI_TEST_FILES_CHANGED}"
           echo "Python code changed: ${PY_FILES_CHANGED}"
           echo "Requirement changes: ${RQ_FILES_CHANGED}"
           echo "Documentation changes: ${DOC_FILES_CHANGED}"
-          if [ ! -z "${CI_TEST_FILES_CHANGED}" ]; then echo ::set-env name=FILES_CHANGED::all; else echo ::set-env name=FILES_CHANGED::${FILES_ADDED_MODIFIED}; fi
-          echo ::set-env name=PY_FILES_CHANGED::${PY_FILES_CHANGED}
-          echo ::set-env name=RQ_FILES_CHANGED::${RQ_FILES_CHANGED}
-          echo ::set-env name=DOC_FILES_CHANGED::${DOC_FILES_CHANGED}
+          echo "Files changed: ${FILES_CHANGED}"
+          echo "FILES_CHANGED=${FILES_CHANGED}" >> ${GITHUB_ENV}
+          echo "PY_FILES_CHANGED=${PY_FILES_CHANGED}" >> ${GITHUB_ENV}
+          echo "RQ_FILES_CHANGED=${RQ_FILES_CHANGED}" >> ${GITHUB_ENV}
+          echo "DOC_FILES_CHANGED=${DOC_FILES_CHANGED}" >> ${GITHUB_ENV}
       - name: Set up python-${{ env.CODECHECK_PY_VER }}
         uses: actions/setup-python@v2
         with:
