--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -12,12 +12,15 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+      - name: Set up qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
       - name: Set up docker buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: docker/setup-buildx-action@v1
         with:
-          buildx-version: latest
-          qemu-version: latest
+          version: latest
       - name: Login to docker registry
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
@@ -38,12 +41,15 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+      - name: Set up qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
       - name: Set up docker buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: docker/setup-buildx-action@v1
         with:
-          buildx-version: latest
-          qemu-version: latest
+          version: latest
       - name: Login to docker registry
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
@@ -63,12 +69,15 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+      - name: Set up qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
       - name: Set up docker buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: docker/setup-buildx-action@v1
         with:
-          buildx-version: latest
-          qemu-version: latest
+          version: latest
       - name: Login to docker registry
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
@@ -89,12 +98,15 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+      - name: Set up qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
       - name: Set up docker buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: docker/setup-buildx-action@v1
         with:
-          buildx-version: latest
-          qemu-version: latest
+          version: latest
       - name: Login to docker registry
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
