--- a/etc/systemd/system/faucet.service
+++ b/etc/systemd/system/faucet.service
@@ -2,11 +2,14 @@
 Description="Faucet OpenFlow switch controller"
 After=network-online.target
 Wants=network-online.target
+Documentation="https://docs.faucet.nz"
 
 [Service]
 EnvironmentFile=/etc/default/faucet
 User=faucet
 Group=faucet
+RuntimeDirectory=faucet
+RuntimeDirectoryMode=0755
 ExecStart=/usr/local/bin/faucet --ryu-config-file=${FAUCET_RYU_CONF} --ryu-ofp-tcp-listen-port=${FAUCET_LISTEN_PORT}
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
