--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -65,7 +65,7 @@ jobs:
       - if: ${{ matrix.python-version == env.CODECHECK_PY_VER }}
         name: Upload codecov
         uses: codecov/codecov-action@v1
-      - if: ${{ env.FILES_CHANGED == 'all' || env.RQ_FILES_CHANGED || env.PY_FILES_CHANGED }}
+      - if: ${{ matrix.python-version != 3.5 && (env.FILES_CHANGED == 'all' || env.RQ_FILES_CHANGED || env.PY_FILES_CHANGED) }}
         name: Pytype
         run: |
           cd ./tests/codecheck
