--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -1,68 +1,8 @@
 name: Build docker images for release
 
-on:
-  release:
-    types:
-      - published
+on: [pull_request]
 
 jobs:
-  faucet-docker-image:
-    name: "Build faucet docker image"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-      - name: Set up qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      - name: Set up docker buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          version: latest
-      - name: Login to docker registry
-        run: |
-          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
-      - name: Run buildx
-        run: |
-          docker buildx build \
-            --tag faucet/faucet:${{ github.event.release.tag_name }} \
-            --tag faucet/faucet:latest \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x \
-            --output "type=registry" \
-            --file Dockerfile.faucet \
-            .
-
-  gauge-docker-image:
-    name: "Build gauge docker image"
-    runs-on: ubuntu-latest
-    needs: faucet-docker-image
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-      - name: Set up qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      - name: Set up docker buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          version: latest
-      - name: Login to docker registry
-        run: |
-          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
-      - name: Run buildx
-        run: |
-          docker buildx build \
-            --tag faucet/gauge:${{ github.event.release.tag_name }} \
-            --tag faucet/gauge:latest \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x \
-            --output "type=registry" \
-            --file Dockerfile.gauge \
-            .
-
   rabbitmq-adapter-docker-image:
     name: "Build rabbitmq adapter docker image"
     runs-on: ubuntu-latest
@@ -85,38 +25,9 @@ jobs:
         run: |
           cd adapters/vendors/rabbitmq/
           docker buildx build \
-            --tag faucet/event-adapter-rabbitmq:${{ github.event.release.tag_name }} \
+            --tag faucet/event-adapter-rabbitmq:1.9.52 \
             --tag faucet/event-adapter-rabbitmq:latest \
             --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x \
-            --output "type=registry" \
-            --file Dockerfile \
-            .
-
-  faucetagent-adapter-docker-image:
-    name: "Build faucetagent adapter docker image"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-      - name: Set up qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
-      - name: Set up docker buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          version: latest
-      - name: Login to docker registry
-        run: |
-          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
-      - name: Run buildx
-        run: |
-          cd adapters/vendors/faucetagent/
-          docker buildx build \
-            --tag faucet/event-adapter-faucetagent:${{ github.event.release.tag_name }} \
-            --tag faucet/event-adapter-faucetagent:latest \
-            --platform linux/amd64 \
             --output "type=registry" \
             --file Dockerfile \
             .
