--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-chewie==0.0.21
-eventlet==0.25.1
+git+https://github.com/c65sdn/chewie.git@master
 influxdb
 msgpack>=0.4.6,<1.0.0
 networkx
 pbr>=1.9
 prometheus_client==0.9.0
 pyyaml==5.3.1
-ryu==4.32
-beka==0.3.4
+git+https://github.com/c65sdn/ryu.git@master
+git+https://github.com/c65sdn/beka.git@master
 pytricia
