--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ git+https://github.com/c65sdn/chewie.git@master
 influxdb
 msgpack>=0.4.6,<1.0.0
 networkx
-pbr>=1.9
+pbr==5.5.1
 prometheus_client==0.9.0
 pyyaml==5.3.1
 git+https://github.com/c65sdn/ryu.git@master
