--- a/Dockerfile.fuzz-config
+++ b/Dockerfile.fuzz-config
@@ -11,7 +11,8 @@ WORKDIR /faucet-src
 RUN \
   apt-get update && \
   apt-get install -y afl cython3 && \
-  $PIP3 pip setuptools && \
+  $PIP3 -r pip-requirements.txt && \
+  $PIP3 setuptools && \
   $PIP3 -r requirements.txt && \
   $PIP3 -r fuzz-requirements.txt && \
   $PIP3 . && \
