--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,6 +1,6 @@
 ## Image name: faucet/tests
 
-FROM faucet/test-base:8.0.6
+FROM c65sdn/test-base:1.0.0
 
 COPY ./ /faucet-src/
 WORKDIR /faucet-src/
