--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
 -r ../requirements.txt
 sphinx==3.5.1
 sphinx_rtd_theme==0.5.1
-sphinxcontrib-svg2pdfconverter
+sphinxcontrib-svg2pdfconverter==1.1.1
