--- a/.github/workflows/release-python.yml
+++ b/.github/workflows/release-python.yml
@@ -24,4 +24,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.4.2
         with:
           user: __token__
-          password: ${{ secrets.PYPI_PASSWORD }}
+          password: ${{ secrets.PYPI_TOKEN }}
