Use system pip rather than pinning an older version.

--- a/Dockerfile.fuzz-packet
+++ b/Dockerfile.fuzz-packet
@@ -2,7 +2,7 @@
 
 FROM faucet/test-base:9.0.0
 
-ENV PIP3="pip3 -q --no-cache-dir install --upgrade"
+ENV PIP3="pip3 --no-cache-dir install --upgrade"
 ENV PATH="/venv/bin:$PATH"
 
 COPY ./ /faucet-src/
@@ -11,8 +11,6 @@ WORKDIR /faucet-src
 RUN \
   apt-get update && \
   apt-get install -y afl cython3 && \
-  $PIP3 -r pip-requirements.txt && \
-  $PIP3 setuptools && \
   $PIP3 -r requirements.txt && \
   $PIP3 -r fuzz-requirements.txt && \
   $PIP3 .
