--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 git+https://github.com/c65sdn/chewie.git@master
-eventlet==0.25.1
+eventlet
 influxdb>=2.12.0
 msgpack==1.0.2
 networkx>=1.9
 pbr>=1.9
 prometheus_client==0.9.0
-pyyaml==5.3.1
+pyyaml==5.4.1
 git+https://github.com/c65sdn/ryu.git@master
 git+https://github.com/c65sdn/beka.git@master
 pytricia>=1.0.0
