--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,6 +1,6 @@
 ## Image name: faucet/tests
 
-FROM c65sdn/test-base:1.0.0
+FROM faucetsdn/test-base:latest
 
 COPY ./ /faucet-src/
 WORKDIR /faucet-src/
