--- a/Dockerfile.fuzz-packet
+++ b/Dockerfile.fuzz-packet
@@ -1,6 +1,6 @@
 ## Image name: faucet/packet-fuzzer
 
-FROM faucet/test-base:9.0.0
+FROM c65sdn/test-base:1.0.2
 
 ENV PIP3="pip3 --no-cache-dir install --upgrade"
 ENV PATH="/venv/bin:$PATH"
