Update test github action workflows.

--- a/.github/workflows/release-python.yml
+++ b/.github/workflows/release-python.yml
@@ -5,6 +5,9 @@ on:
     types:
       - published
 
+env:
+  RELEASE_PY_VER: 3.8
+
 jobs:
   python-package:
     name: "Build and publish python packages"
@@ -14,10 +17,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      - name: Set up python-3.7
+      - name: Set up python-${{ env.RELEASE_PY_VER }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: ${{ env.RELEASE_PY_VER }}
       - name: Build python package
         run: python3 setup.py sdist
       - name: Publish python package to PyPI
