--- a/.github/workflows/tests-codecheck.yml
+++ b/.github/workflows/tests-codecheck.yml
@@ -66,4 +66,10 @@ jobs:
         name: Run pylint
         run: |
           cd ./tests/codecheck
-          ./pylint.sh ${{ env.PY_FILES_CHANGED }}
+          if [[ "${{ env.FILES_CHANGED }}" == "all" || ! -z "${{ env.RQ_FILES_CHANGED }}" ]]; then
+            echo "Running pylint on everything"
+            ./pylint.sh
+          else
+            echo "Running pylint on ${{ env.PY_FILES_CHANGED }}"
+            ./pylint.sh ${{ env.PY_FILES_CHANGED }}
+          fi
