--- a/hw_switch_config.yaml
+++ b/hw_switch_config.yaml
@@ -1,6 +1,7 @@
-# if set to True, map a hardware OpenFlow switch to ports on this machine.
+---
+# if set to true, map a hardware OpenFlow switch to ports on this machine.
 # Otherwise, run tests against OVS locally.
-hw_switch: False
+hw_switch: false
 hardware: 'Open vSwitch'
 # Map ports on the hardware switch, to physical ports on this machine.
 dp_ports:
@@ -14,7 +15,7 @@ dpid: 0xeccd6d9936ed
 # Hardware switch must use IP address of this port as controller IP.
 # To use IPv6 address of the CPN port, set cpn_ipv6 to True
 cpn_intf: enp5s0
-cpn_ipv6: False
+cpn_ipv6: false
 # There must be two controllers configured on the hardware switch,
 # with same IP (see cpn_intf), but different ports - one for FAUCET,
 # one for Gauge.
