--- a/.github/workflows/release-debian.yml
+++ b/.github/workflows/release-debian.yml
@@ -1,9 +1,9 @@
 name: Build debian packages and images for release
 
 on:
-  release:
-    types:
-      - published
+  push:
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
 
 env:
   DEBIAN_FRONTEND: noninteractive
