pylint: White-list 'unittest' names - setUp & tearDown

--- a/.pylintrc
+++ b/.pylintrc
@@ -3,3 +3,8 @@
 
 [FORMAT]
 max-line-length=120
+
+[BASIC]
+# Default: method-naming-style=snake_case (SnakeCaseStyle)
+# Override: add 'unittest' methods (setUp & tearDown)
+method-rgx=(([^\W\dA-Z][^\WA-Z]{2,}|_[^\WA-Z]*|__[^\WA-Z\d_][^\WA-Z]+__)|(setUp)|(tearDown))$
