--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = faucet
+name = c65faucet
 summary = Faucet is an OpenFlow controller that implements a layer 2 and layer 3 switch.
 license = Apache-2
 author = Faucet development team
