--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,9 @@
 [MASTER]
+# TODO: remove consider-using-f-string when python3.5 is gone.
 disable=
     fixme,
-    import-error
+    import-error,
+    consider-using-f-string
 
 [FORMAT]
 max-line-length=120
