--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,16 +1,7 @@
 {
-  "ignoreDeps": ["eventlet"],
-  "separateMajorMinor": false,
-  "schedule": [
-    "after 10pm every weekday",
-    "before 5am every weekday",
-    "every weekend"
-  ],
-  "timezone": "Pacific/Auckland",
   "extends": [
     "config:base",
-    ":prHourlyLimit1",
-    ":preserveSemverRanges",
     "docker:enableMajor"
-  ]
+  ],
+  "ignorePaths": []
 }
