migrate to ruamel.yaml.

--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Depends: python3-influxdb (>= 2.12.0),
          python3-networkx (>= 1.9),
          python3-pbr (>= 1.9),
          python3-prometheus-client (>= 0.9.0), python3-prometheus-client (<< 0.9.1),
-         python3-yaml (>= 6.0), python3-yaml (<< 6.1),
+         python3-ruamel.yaml (>= 0.17.17), python3-ruamel.yaml (<< 0.17.18),
          python3-eventlet (>= 0.25.1), python3-eventlet (<< 0.25.2),
          python3-ryu (>= 4.32), python3-ryu (<< 4.33),
          python3-beka (>= 0.3.5), python3-beka (<< 0.3.6),
