--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ msgpack>=0.4.6,<1.0.0
 networkx>=1.9
 pbr>=1.9
 prometheus_client==0.9.0
-pyyaml==6.0
+ruamel.yaml==0.17.17
 ryu==4.32
 beka==0.3.5
 pytricia>=1.0.0
