--- a/debian/control
+++ b/debian/control
@@ -15,9 +15,8 @@ Build-Depends: debhelper (>=9),
                python3-msgpack (>= 0.4.6), python3-msgpack (<< 1.0.0),
                python3-networkx,
                python3-prometheus-client,
-               python3-yaml,
+               python3-os_ken,
                python3-eventlet,
-               python3-ryu,
                python3-beka,
                python3-chewie,
                python3-pytricia,
@@ -35,10 +34,10 @@ Depends: python3-influxdb (>= 2.12.0),
          python3-pbr (>= 1.9),
          python3-prometheus-client (>= 0.12.0), python3-prometheus-client (<< 0.12.1),
          python3-ruamel.yaml (>= 0.17.17), python3-ruamel.yaml (<< 0.17.18),
-         python3-eventlet (>= 0.25.1), python3-eventlet (<< 0.25.2),
-         python3-ryu (>= 4.32), python3-ryu (<< 4.33),
-         python3-beka (>= 0.3.5), python3-beka (<< 0.3.6),
-         python3-chewie (>= 0.0.22), python3-chewie (<< 0.0.23),
+         python3-eventlet (>= 0.33.0),
+         python3-os_ken (>= 2.3.0), python3-os_ken (<< 2.3.1),
+         python3-beka (>= 0.4.0), python3-beka (<< 0.4.1),
+         python3-chewie (>= 0.0.23), python3-chewie (<< 0.0.24),
          python3-pytricia (>= 1.0.0),
          python3:any (>= 3.6~),
 Suggests: python-faucet-doc, faucet, gauge
