--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-chewie==0.0.22
-eventlet==0.25.1
+chewie==0.0.23
 influxdb>=2.12.0
-msgpack>=0.4.6,<1.0.0
 networkx>=1.9
 pbr>=1.9
 prometheus_client==0.12.0
 ruamel.yaml==0.17.17
-ryu==4.32
-beka==0.3.5
+os_ken==2.3.0
+beka==0.4.0
 pytricia>=1.0.0
