--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ export PYBUILD_NAME=faucet
 export PYBUILD_AFTER_INSTALL=rm -rf '{destdir}/usr/etc'
 
 %:
-	dh $@  --with python3,systemd --buildsystem=pybuild
+	dh $@  --with python3 --buildsystem=pybuild
 
 override_dh_installinit:
 	dh_installinit --noscripts
