Unit test python 3.10, but exclude from pytype.

--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -5,6 +5,8 @@ on: [push, pull_request]
 env:
   FILES_CHANGED: "all"
   CODECOV_PY_VER: 3.8
+  # TODO: pytype does not yet support python 3.10: https://github.com/google/pytype/issues/1022
+  USING_PYTYPE: '3.7,3.8,3.9'
 
 jobs:
   unit-tests:
@@ -12,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, '3.10']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -69,12 +71,14 @@ jobs:
       - if: ${{ env.FILES_CHANGED == 'all' || env.RQ_FILES_CHANGED || env.PY_FILES_CHANGED }}
         name: Run pytype
         run: |
-          ./docker/pip_deps.sh --extra-requirements="codecheck-requirements.txt"
-          cd ./tests/codecheck
-          if [[ "${{ env.FILES_CHANGED }}" == "all" || ! -z "${{ env.RQ_FILES_CHANGED }}" ]]; then
-            echo "Running pytype on everything"
-            ./pytype.sh
-          else
-            echo "Running pytype on ${{ env.PY_FILES_CHANGED }}"
-            ./pytype.sh ${{ env.PY_FILES_CHANGED }}
+          if ${{ contains(env.USING_PYTYPE, matrix.python-version) }} == 'true' ; then
+            ./docker/pip_deps.sh --extra-requirements="codecheck-requirements.txt"
+            cd ./tests/codecheck
+            if [[ "${{ env.FILES_CHANGED }}" == "all" || ! -z "${{ env.RQ_FILES_CHANGED }}" ]]; then
+              echo "Running pytype on everything"
+              ./pytype.sh
+            else
+              echo "Running pytype on ${{ env.PY_FILES_CHANGED }}"
+              ./pytype.sh ${{ env.PY_FILES_CHANGED }}
+            fi
           fi
