--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Build docker
         run: docker build --pull -t ${FAUCET_TEST_IMG} -f Dockerfile.tests . || exit 1
       - name: Run docker
-        run: sudo docker run ${SHARDARGS} -e FAUCET_TESTS="${{ matrix.MATRIX_SHARD }}" -t ${FAUCET_TEST_IMG} || exit 1
+        run: sudo docker run ${SHARDARGS} -e FAUCET_TESTS="${{ matrix.MATRIX_SHARD }}" -e FAUCET_GENERATIVE_LIMIT=200 -t ${FAUCET_TEST_IMG} || exit 1
       - name: Detect core dumps
         run: if [ ls -1 /var/tmp/core* > /dev/null 2>&1 ]; then exit 1; fi
