--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 env:
   FILES_CHANGED: "all"
   CODECOV_PY_VER: 3.8
-  USING_PYTYPE: '3.7,3.8,3.9,3.10'
+  USING_PYTYPE: '3.8,3.9,3.10'
 
 jobs:
   unit-tests:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: [3.8, 3.9, '3.10']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
