--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 c65chewie==1.0.2
+git+https://github.com/c65sdn/os-ken@1.0.0
 influxdb>=2.12.0
 networkx>=1.9
 pbr>=1.9
 prometheus_client==0.14.1
 ruamel.yaml==0.17.21
-os_ken==2.4.0
 c65beka==1.0.0
 pytricia>=1.0.0
