Update mailing lists.

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = faucet
 summary = Faucet is an OpenFlow controller that implements a layer 2 and layer 3 switch.
 license = Apache-2
 author = Faucet development team
-author-email = faucet-dev@list.waikato.ac.nz
+author-email = faucetsdn@googlegroups.com
 home-page = https://faucet.nz
 platform = any
 classifier =
