--- a/debian/control
+++ b/debian/control
@@ -31,6 +31,7 @@ Depends: python3-influxdb (>= 2.12.0),
          python3-pbr (>= 1.9),
          python3-prometheus-client (>= 0.15.0), python3-prometheus-client (<< 0.15.1),
          python3-ruamel.yaml (>= 0.17.21), python3-ruamel.yaml (<< 0.17.22),
+         python3-dnspython (<< 2.3.0),
          python3-os-ken (>= 2.6.0), python3-os-ken (<< 2.6.1),
          python3-beka (>= 0.4.1), python3-beka (<< 0.4.2),
          python3-chewie (>= 0.0.24), python3-chewie (<< 0.0.25),
