--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 c65chewie==1.0.3
-git+https://github.com/c65sdn/os-ken@1.0.0
+# git+https://github.com/c65sdn/os-ken@1.0.0
 influxdb>=2.12.0
 networkx>=1.9
 pbr>=1.9
