--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-c65chewie==1.0.3
+c65chewie==1.0.4
 # git+https://github.com/c65sdn/os-ken@1.0.0
 influxdb>=2.12.0
 networkx>=1.9
 pbr>=1.9
 prometheus_client==0.16.0
 ruamel.yaml==0.17.21
-c65beka==1.0.0
-# dnspython 2.3.0 is not compatible with eventlet
-# https://github.com/eventlet/eventlet/issues/781
-dnspython<2.3.0
+c65beka==1.0.1
+dnspython==2.3.0
 os_ken==2.6.0
 pytricia>=1.0.0
