--- a/.github/workflows/tests-docs.yml
+++ b/.github/workflows/tests-docs.yml
@@ -14,10 +14,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - if: ${{ github.event_name == 'pull_request' }}
-        name: Setup dependencies
+        name: Setup dependencies for changed files action
         run: |
           sudo apt-get update -y
           sudo apt-get install -y jq
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - if: ${{ github.event_name == 'pull_request' }}
         name: Get file changes
         id: file_changes
