--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -17,10 +17,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - if: ${{ github.event_name == 'pull_request' }}
-        name: Setup dependencies
+        name: Setup dependencies for changed files action
         run: |
           sudo apt-get update -y
           sudo apt-get install -y jq
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - if: ${{ github.event_name == 'pull_request' }}
         name: Get file changes
         id: file_changes
@@ -86,10 +87,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - if: ${{ github.event_name == 'pull_request' && github.event.before != '0000000000000000000000000000000000000000' }}
-        name: Setup dependencies
+        name: Setup dependencies for changed files action
         run: |
           sudo apt-get update -y
           sudo apt-get install -y jq
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - if: ${{ github.event_name == 'pull_request' && github.event.before != '0000000000000000000000000000000000000000' }}
         name: Get file changes
         id: file_changes
