--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -12,7 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: faucet/test-base:latest
-      options: --privileged --cap-add=ALL -v /lib/modules:/lib/modules -v /var/local/lib/docker:/var/lib/docker --sysctl net.ipv6.conf.all.disable_ipv6=0 --ulimit core=-1
+      options: >-
+        --privileged --cap-add=ALL
+        --cgroupns=host
+        -v /lib/modules:/lib/modules
+        -v /sys/fs/cgroup:/sys/fs/cgroup:rw
+        -v /var/local/lib/docker:/var/lib/docker
+        --sysctl net.ipv6.conf.all.disable_ipv6=0
+        --ulimit core=-1
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -79,7 +86,14 @@ jobs:
     needs: sanity-tests
     container:
       image: faucet/test-base:latest
-      options: --privileged --cap-add=ALL -v /lib/modules:/lib/modules -v /var/local/lib/docker:/var/lib/docker --sysctl net.ipv6.conf.all.disable_ipv6=0 --ulimit core=-1
+      options: >-
+        --privileged --cap-add=ALL
+        --cgroupns=host
+        -v /lib/modules:/lib/modules
+        -v /sys/fs/cgroup:/sys/fs/cgroup:rw
+        -v /var/local/lib/docker:/var/lib/docker
+        --sysctl net.ipv6.conf.all.disable_ipv6=0
+        --ulimit core=-1
     strategy:
       matrix:
         MATRIX_SHARD: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
