Stop udevd on host to improve mininet performance.

--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -14,6 +14,7 @@ jobs:
       image: faucet/test-base:latest
       options: >-
         --privileged --cap-add=ALL
+        --pid=host
         --cgroupns=host
         -v /lib/modules:/lib/modules
         -v /sys/fs/cgroup:/sys/fs/cgroup:rw
@@ -66,6 +67,7 @@ jobs:
           sysctl --quiet -w kernel.core_pattern="/var/tmp/core.%h.%e.%t"
           modprobe openvswitch
           modprobe ebtables
+          pkill systemd-udevd
           ln -s "$(pwd)" /faucet-src
       - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
         name: Run sanity tests
@@ -88,6 +90,7 @@ jobs:
       image: faucet/test-base:latest
       options: >-
         --privileged --cap-add=ALL
+        --pid=host
         --cgroupns=host
         -v /lib/modules:/lib/modules
         -v /sys/fs/cgroup:/sys/fs/cgroup:rw
@@ -143,6 +146,7 @@ jobs:
           sysctl --quiet -w kernel.core_pattern="/var/tmp/core.%h.%e.%t"
           modprobe openvswitch
           modprobe ebtables
+          pkill systemd-udevd
           ln -s "$(pwd)" /faucet-src
       - if: ${{ env.FILES_CHANGED == 'all' || env.PY_FILES_CHANGED || env.RQ_FILES_CHANGED }}
         name: Shard tests
