--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 env:
   FILES_CHANGED: "all"
-  CODECOV_PY_VER: 3.8
+  CODECOV_PY_VER: '3.10'
   USING_PYTYPE: '3.8,3.9,3.10'
 
 jobs:
