--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+eventlet @ https://github.com/faucetsdn/eventlet/archive/main.tar.gz#egg=eventlet
+ncclient @ https://github.com/faucetsdn/python3-fakencclient/archive/main.tar.gz#egg=ncclient
 chewie==0.0.25
 influxdb>=2.12.0
 networkx>=1.9
@@ -7,4 +9,3 @@ ruamel.yaml==0.17.32
 os_ken==2.6.0
 beka==0.4.2
 pytricia>=1.0.0
-https://github.com/faucetsdn/python3-fakencclient/archive/main.tar.gz
