--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -6,7 +6,7 @@ env:
   FILES_CHANGED: "all"
   CODECOV_PY_VER: "3.12"
   PYTYPE_CHECK: "3.10,3.11,3.12"
-  PYRIGHT_CHECK: "3.10,3.11,3.12,3.13"
+  PYRIGHT_CHECK: "3.10,3.11,3.12,3.13,3.14"
 
 jobs:
   unit-tests:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, "3.10", 3.11, 3.12, 3.13]
+        python-version: [3.9, "3.10", 3.11, 3.12, 3.13, 3.14]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
