Replace deprecated pkg_resources with importlib

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,12 +3,11 @@ name = faucet
 summary = Faucet is an OpenFlow controller that implements a layer 2 and layer 3 switch.
 license = Apache-2
 author = Faucet development team
-author-email = faucetsdn@googlegroups.com
-home-page = https://faucet.nz
+author_email = faucetsdn@googlegroups.com
+home_page = https://faucet.nz
 platform = any
 classifier =
     Development Status :: 5 - Production/Stable
-    License :: OSI Approved :: Apache Software License
     Topic :: System :: Networking
     Natural Language :: English
     Programming Language :: Python
